--- a/index.html
+++ b/index.html
@@ -131,6 +131,22 @@
                     </div>
                 </div>
             </div>
+            <div class="row mt-5 project">
+                <div class="col-md-6">
+                    <h5 class="mb-4"><a href="./kiddy/index.html" target="_blank">Kids playground website</a></h5>
+                    <h6>Details:</h6>
+                    <p>Landing page for Childrens playground</p>
+                    <h6>Language/Framework/Library:</h6>
+                    <p>HTML, CSS, Bootstrap, Java script</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="project-thumbnail">
+                        <a href="./kiddy/index.html" target="_blank">
+                            <img src="./images/thumb-kiddy.jpg" alt="thumb-kiddy" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </body>
