--- a/index.html
+++ b/index.html
@@ -147,6 +147,22 @@
                     </div>
                 </div>
             </div>
+            <div class="row mt-5 project">
+                <div class="col-md-6">
+                    <h5 class="mb-4"><a href="./swimming/index.html" target="_blank">A Swimming School</a></h5>
+                    <h6>Details:</h6>
+                    <p>Landing page for a Swimming School</p>
+                    <h6>Language/Framework/Library:</h6>
+                    <p>PUG, SASS, Bootstrap, Java script</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="project-thumbnail">
+                        <a href="./swimming/index.html" target="_blank">
+                            <img src="./images/thumb-swimming.jpg" alt="thumb-swimming" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </body>
